--- a/view/index.html
+++ b/view/index.html
@@ -30,7 +30,7 @@
                         <label class="label address">
                             <span class="label_title">文档地址</span>
                             <div class="input_box">
-                                <input class="input" type="text" data-type="" data-tips="" placeholder="请输入md文档名称">
+                                <input class="input" type="text" data-type="" data-tips="" placeholder="请输入md文档名称, 注: 格式 *.md">
                             </div>
                         </label>
                         <div class="btn">{{config.in_save}}</div>
