--- a/public/css/index.css
+++ b/public/css/index.css
@@ -18,9 +18,6 @@ body {
 a {
     text-decoration: none;
 }
-ul {
-    list-style: none;
-}
 .slidebar {
     position: fixed;
     left: 0;
@@ -35,6 +32,9 @@ ul {
     background: #fff;
     border-right: 1px solid #eee;
     box-shadow: 5px 0px 10px rgba(0, 0, 0, .05);
+}
+.slidebar ul {
+    list-style: none;
 }
 .slidebar.active {
     width: 100%;
@@ -120,18 +120,46 @@ ul {
     outline: none;
     border: 1px solid #f1f1f1;
 }
+.nav .nav_title {
+    width: auto;
+    height: auto;
+    overflow: hidden;
+    padding: 12px 10px;
+    background: #999;
+    color: #fff;
+    cursor: pointer;
+}
 .nav li {
     width: auto;
     height: auto;
     overflow: hidden;
-    margin-top: 5px;
-    padding: 8px 10px;
+    margin: 5px 0 0;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     -ms-border-radius: 4px;
     -o-border-radius: 4px;
     border-radius: 4px;
     border: 1px solid #f1f1f1;
+}
+.nav li .sub_nav {
+    padding-bottom: 5px;
+}
+.nav li .sub_nav li {
+    margin: 5px 10px 0;
+}
+.nav li .nav_info {
+    width: auto;
+    overflow: hidden;
+    padding: 8px 10px;
+}
+.sub_nav {
+    display: none;
+}
+.nav .nav_title.focus {
+    background-color: #666;
+}
+.nav .sub_nav.in {
+    display: block;
 }
 .nav li.li_first {
     margin-top: 0;
@@ -179,7 +207,6 @@ ul {
     overflow-x: hidden;
     overflow-y: auto;
     padding: 0 15px 10px 15px;
-    
 }
 .markdown-body-active {
     overflow-y: hidden;
