--- a/view/index.html
+++ b/view/index.html
@@ -62,6 +62,7 @@
                 <div class="btn content_btn content_save">{{config.content_save}}</div>
                 <div class="btn content_btn content_copy">{{config.content_copy}}</div>
             </div>
+            <div class="loading"><img src="images/loading.gif"></div>
         </div>
     </div>
     <script src="script/jquery.js"></script>
