--- a/view/index.html
+++ b/view/index.html
@@ -11,6 +11,7 @@
         <div class="slidebar">
             <div class="newmd">
                 <div class="btn newmd_btn">{{config.newmd}}</div>
+                <div class="btn example hide"><a href="http://www.myjsblog.com" target="_blank">周报例子</a></div>
                 <div class="select_wrap" style="z-index: 8;">
                     <div class="select">
                         <div class="value">点击选择垂类</div>
