--- a/view/index.html
+++ b/view/index.html
@@ -14,8 +14,9 @@
                 <div class="btn example hide"><a href="http://www.myjsblog.com" target="_blank">周报例子</a></div>
                 <div class="select_wrap" style="z-index: 8;">
                     <div class="select">
-                        <div class="value">点击选择垂类</div>
+                        <div class="value"></div>
                         <div class="option">
+                            <p class="active">点击选择垂类</p>
                             {{each dirData as $item index}}
                                 {{if !$item.link}}
                                 <p>{{$item.title}}</p>
