--- a/view/index.html
+++ b/view/index.html
@@ -56,7 +56,8 @@
                                 <input class="input" type="text" data-type="" data-tips="" placeholder="请输入md文档名称, 注: 格式 *.md">
                             </div>
                         </label>
-                        <div class="btn">{{config.in_save}}</div>
+                        <div class="btn btn_save">{{config.in_save}}</div>
+                        <div class="btn btn_chanel">{{config.in_chanel}}</div>
                     </div>
                 </form>
             </div>
@@ -66,6 +67,7 @@
                         {{if $item.link}}
                             <div class="nav_info">
                                 <a href="{{$item.link}}">{{$item.title}}</a>
+                                <!-- <span class="btn dele">删除</span> -->
                                 <span class="btn edit">编辑</span>
                                 <span class="btn add">添加</span>
                             </div>
